--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-rangeslider": "^2.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.0",
     "react-scroll-to-bottom": "^1.3.2",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1"
