--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-scroll-to-bottom": "^1.3.2",
+    "react-slick": "^0.25.2",
+    "react-swipeable-views": "^0.13.9",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1"
   },
